# amqpConnect-

./: CMakeLists.txt  README.md  connect.cpp
include/: amqpConnect.h  streamBuffer.h
init/: CMakeLists.txt  QueueStructure.cpp
init/include/: amqpConnect.h
receive/: CMakeLists.txt  receive.cpp
receive/src/: amqpConnect.cpp
send/: CMakeLists.txt  send.cpp
src/: amqpConnect.cpp  streamBuffer.cpp
